--- a/Fashion_Prediction_GNN.ipynb
+++ b/Fashion_Prediction_GNN.ipynb
@@ -8,6 +8,8 @@
       "source": [
         "### Graph Neural Networks for Fashion Product Recommendations\n",
         "\n",
+        "github repo: https://github.com/ayeshavm/gnn-fashion-recommendation\n",
+        "\n",
         "#### 1. **Introduction**\n",
         "\n",
         "Fashion discovery on platforms like Pinterest is driven by recommendations that help users find relevant products based on their preferences. In this project, we build a Graph Neural Network (GNN) that learns product relationships and generates meaningful recommendations.\n",
@@ -28,13 +30,14 @@
         "- **fashion-cat.json** – Contains product category information (multi-label classification).\n",
         "\n",
         "##### 2.1 **Data Description**\n",
-        "| **Feature** | **Description** |\n",
-        "|------------|----------------|\n",
-        "| **Product ID** | Unique identifier for each fashion product |\n",
-        "| **Scene ID** | Unique identifier for scenes containing multiple products |\n",
-        "| **Bounding Box** | (x, y, w, h) coordinates for product location in scene images |\n",
-        "| **Category** | Multi-label category for each product (e.g., \"Shoes | Sneakers\") |\n",
-        "| **Image URL** | Direct URL to product images |\n",
+        "| **Feature**               | **Description**                                                       |\n",
+        "|---------------------------|------------------------------------------------------------------------|\n",
+        "| **Product ID**            | Unique identifier for each fashion product                            |\n",
+        "| **Scene ID**              | Unique identifier for scenes containing multiple products             |\n",
+        "| **Bounding Box**          | (x, y, w, h) coordinates for product location in scene images         |\n",
+        "| **Category**              | Multi-label category for each product (e.g., \"Shoes \\| Sneakers\")     |\n",
+        "| **Image URL**             | Direct URL to product images                                          |\n",
+        "\n",
         "\n",
         "##### 2.2 **Data Processing**\n",
         "- **Removed the broad category** \"Apparel & Accessories\" to improve feature distinctiveness.\n",
@@ -51,12 +54,13 @@
         "\n",
         "\n",
         "#### **Graph Edges (Relationships)**\n",
-        "| **Edge Type** | **Description** |\n",
-        "|--------------|----------------|\n",
-        "| **Product ↔ Scene** | Links a product to the scenes it appears in. |\n",
-        "| **Product ↔ Product (Category Similarity)** | Connects products that share the same category. |\n",
-        "| **Product ↔ Product (Object Similarity)** | Links products with similar detected objects. |\n",
-        "| **Scene ↔ Scene** | Connects scenes with overlapping products. |\n",
+        "| **Edge Type**                                         | **Description**                                              |\n",
+        "|------------------------------------------------------|--------------------------------------------------------------|\n",
+        "| **Product ↔ Scene**                                  | Links a product to the scenes it appears in.                |\n",
+        "| **Product ↔ Product (Category Similarity)**          | Connects products that share the same category.             |\n",
+        "| **Product ↔ Product (Object Similarity)**            | Links products with similar detected objects.               |\n",
+        "| **Scene ↔ Scene**                                    | Connects scenes with overlapping products.                  |\n",
+        "\n",
         "\n",
         "**Graph Statistics:**\n",
         "- **Total Nodes:** `67,549` (Products + Scenes)  \n",
@@ -108,7 +112,6 @@
         "- Clusters Overlapped, Indicating the Model Wasn't Fully Separating Products.  \n",
         "- Scene-Based Relationships Improved Diversity.\n",
         "\n",
-        "---\n",
         "\n",
         "### **7. Results & Summary**\n",
         "\n",
@@ -1282,23 +1285,7 @@
         "}, model_path)\n",
         "\n",
         "print(f\"Model saved successfully at {model_path}\")\n",
-        "\n",
-        "# # Load the model\n",
-        "# checkpoint = torch.load(\"gat_model.pth\", map_location=torch.device('cuda' if torch.cuda.is_available() else 'cpu'))\n",
-        "\n",
-        "# # Initialize model architecture (must match the saved model)\n",
-        "# model = GATModel(in_channels, hidden_channels, out_channels)  # Ensure same architecture\n",
-        "\n",
-        "# # Load weights\n",
-        "# model.load_state_dict(checkpoint['model_state_dict'])\n",
-        "\n",
-        "# # Load optimizer state (optional, useful for resuming training)\n",
-        "# optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
-        "\n",
-        "# # Get the number of epochs trained\n",
-        "# epochs_trained = checkpoint.get('epochs_trained', 0)\n",
-        "\n",
-        "# print(f\"✅ Model loaded successfully! It was trained for {epochs_trained} epochs.\")\n"
+        "\n"
       ]
     },
     {
@@ -1357,22 +1344,22 @@
       "source": [
         "- Distinct Clusters Are Formed:\n",
         "\n",
-        "The products are separated into 5 clusters (Cluster 0 to Cluster 4), each represented by a different color.\n",
-        "This means that the GNN learned some differentiation between product embeddings, but we need to assess how meaningful these clusters are.\n",
+        "    The products are separated into 5 clusters (Cluster 0 to Cluster 4), each represented by a different color.\n",
+        "    This means that the GNN learned some differentiation between product embeddings, but we need to assess how meaningful these clusters are.\n",
         "\n",
         "- Overlapping Regions & Dense Clusters\n",
         "\n",
-        "The blue and dark red clusters are densely packed and overlapping, which suggests that many product embeddings are still very similar.\n",
-        "This aligns with our previous issue where similarity scores were too high (~0.999), meaning embeddings are not spreading out enough.\n",
-        "Ideally, clusters should be more distinctly separated if they represent different fashion categories.\n",
+        "    The blue and dark red clusters are densely packed and overlapping, which suggests that many product embeddings are still very similar.\n",
+        "    This aligns with our previous issue where similarity scores were too high (~0.999), meaning embeddings are not spreading out enough.\n",
+        "    Ideally, clusters should be more distinctly separated if they represent different fashion categories.\n",
         "\n",
         "- Outlier Groups (Top Right & Top Center)\n",
         "\n",
-        "There are small groups of products (grey & light red clusters) that are more isolated from the rest.\n",
-        "This suggests that these embeddings are less connected to the other clusters and may correspond to niche fashion categories or unique styles.\n",
+        "    There are small groups of products (grey & light red clusters) that are more isolated from the rest.\n",
+        "    This suggests that these embeddings are less connected to the other clusters and may correspond to niche fashion categories or unique styles.\n",
         "\n",
         "- Some Products Spread Out More Than Others.  Certain points (bottom right and far left) are more isolated from their main cluster.\n",
-        "This could mean these products don’t fit neatly into a specific cluster or that their embeddings didn’t learn strong relationships."
+        "    This could mean these products don’t fit neatly into a specific cluster or that their embeddings didn’t learn strong relationships."
       ]
     },
     {
